Styling fixes
Ensuring CMS body always fills the screen, making the file upload input
invisible, and using a regular button to trigger clicks on it (as it was
not possible to add styles to the file input "button"

--- a/src/app/cms/cms.component.css
+++ b/src/app/cms/cms.component.css
@@ -2,6 +2,7 @@
     display: block;
     background-color: #8fb7cc;
     padding: 0 1% 2% 1%;
+    min-height: 77vh;
 }
 a {
     text-decoration: none;
