--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* General */
 html {
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 body {
     margin: 0;
